<resources>
    <string name="app_name">Constitution of India</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_preamble">Preamble</string>
    <string name="title_activity_parts">Parts</string>
    <string name="title_activity_schedules">Schedules</string>
    <string name="title_activity_amendments">Amendments</string>
    <string name="title_activity_scrolling">Indian Constitution</string>


    <string name="Preamble">
        <b>WE, THE PEOPLE OF INDIA,</b> having solemnly resolved to constitute India into a <b>SOVEREIGN SOCIALIST SECULAR DEMOCRATIC REPUBLIC</b>[1] and to secure to all its citizens:\n\n
        <b>JUSTICE,</b> social, economic and political;\n\n
        <b>LIBERTY</b> of thought , expression, belief, faith and worship;\n\n
        <b>EQUALITY</b> of status and of opportunity; and to promote among them all\n\n
        <b>FRATERNITY</b> assuring the dignity of the individual and the unity and integrity of the Nation[2];\n\n
        <b>IN OUR CONSTITUENT ASSEMBLY</b> this twenty-sixth day of November, 1949, do <b>HEREBY ADOPT, ENACT AND GIVE TO OURSELVES THIS CONSTITUTION.</b>\n\n
        [1]<i>Subs. by the Constitution (Forty-second Amendment) Act,1976,s. 2, for "SOVEREIGN DEMOCRATIC REPUBLIC" (w.e.f. 3-1-1977</i>\n
        [2] <i>Subs. by s. 2, ibid., for "unity of the nation" (w.e.f. 3-1-1977).</i>
    </string>

    <string name="part1"><b>Part 1 (Art. 1 to 4)</b>\n The Union and its Territories</string>
    <string name="part2"><b>Part 2 (Art. 5 to 11)</b>\n Citizenship</string>
    <string name="part3"><b>Part 3 (Art. 12 to 35)</b>\n Fundamental Rights</string>
    <string name="part4"><b>Part 4 (Art. 36 to 51)</b>\n Directive Principles of State Policy</string>
    <string name="part4A"><b>Part 4A (Art. 51A)</b>\n Fundamental Duties</string>
    <string name="part5"><b>Part 5 (Art. 52 to 151)</b>\n The Union</string>
    <string name="part6"><b>Part 6 (Art. 152 to 237)</b>\n The States</string>
    <string name="part7"><b>Part 7 (Repealed)</b>\n The States in Part B of First Schedule</string>
    <string name="part8"><b>Part 8 (Art. 239 to 242)</b>\n The Union Territories</string>
    <string name="part9"><b>Part 9 (Art. 243 to 243O)</b>\n The Panchayats</string>
    <string name="part9A"><b>Part 9A (Art. 243P to 243ZG)</b>\n The Municipalities</string>
    <string name="part9B"><b>Part 9B (Art. 243ZH to 243ZT)</b>\n The Co-Operative Societies</string>
    <string name="part10"><b>Part 10 (Art. 244 to 244A)</b>\n The Schedules and Tribal Areas</string>
    <string name="part11"><b>Part 11 (Art. 245 to 263)</b>\n Relations between the Union and the States</string>
    <string name="part12"><b>Part 12 (Art. 264 to 300A)</b>\n Finance, Property, Contracts and Suits</string>
    <string name="part13"><b>Part 13 (Art. 301 to 307)</b>\n Trade, Commerce and Intercourse within the territory of India</string>
    <string name="part14"><b>Part 14 (Art. 308 to 323)</b>\n Services Under the Union and the States</string>
    <string name="part14A"><b>Part 14A (Art. 323A to 323B)</b>\n Tribunals</string>
    <string name="part15"><b>Part 15 (Art. 324 to 329A)</b>\n Elections</string>
    <string name="part16"><b>Part 16 (Art. 330 to 342)</b>\n Special provisions relating to certain classes</string>
    <string name="part17"><b>Part 17 (Art. 343 to 351)</b>\n Official Language</string>
    <string name="part18"><b>Part 18 (Art. 352 to 360)</b>\n Emergency Provisions</string>
    <string name="part19"><b>Part 19 (Art. 361 to 367)</b>\n Miscellaneous</string>
    <string name="part20"><b>Part 20 (Art. 368)</b>\n Amendment of the Constitution</string>
    <string name="part21"><b>Part 21 (Art. 369 to 392)</b>\n Temporary, Transitional and Special Provisions</string>
    <string name="part22"><b>Part 22 (Art. 393 to 395)</b>\n Short Title, Commencement, Authoritativre Text in Hindi and Repeals</string>
    <string name="title_activity_part1">Part 1</string>
    <string name="large_text">
 "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_part2">Part2</string>
    <string name="title_activity_part3">Part3</string>
    <string name="title_activity_part4">Part4</string>
    <string name="title_activity_part5">Part5</string>
    <string name="title_activity_part6">Part6</string>
    <string name="title_activity_part7">Part7</string>
    <string name="title_activity_part8">Part8</string>
    <string name="title_activity_part9">Part9</string>
    <string name="title_activity_part10">Part10</string>
    <string name="title_activity_part11">Part11</string>
    <string name="title_activity_part12">Part12</string>
    <string name="title_activity_part13">Part13</string>
    <string name="title_activity_part14">Part14</string>
    <string name="title_activity_part15">Part15</string>
    <string name="title_activity_part16">Part16</string>
    <string name="title_activity_part17">Part17</string>
    <string name="title_activity_part18">Part18</string>
    <string name="title_activity_part19">Part19</string>
    <string name="title_activity_part20">Part20</string>
    <string name="title_activity_part21">Part21</string>
    <string name="title_activity_part22">Part22</string>
    <string name="title_activity_part23">Part23</string>
    <string name="title_activity_part24">Part24</string>
    <string name="title_activity_part25">Part25</string>
    <string name="title_activity_part26">Part26</string>
    <string name="please_wait">Please Wait...</string>
</resources>
