<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.appbusters.robinpc.constitutionofindia.parts"
    tools:showIn="@layout/activity_parts">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Part1"
                android:text="@string/part1"
                android:background="?android:attr/selectableItemBackground"
                android:padding="10dp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Part2"
                android:text="@string/part2"
                android:background="?android:attr/selectableItemBackground"
                android:padding="10dp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Part3"
                android:text="@string/part3"
                android:background="?android:attr/selectableItemBackground"
                android:padding="10dp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Part4"
                android:text="@string/part4"
                android:background="?android:attr/selectableItemBackground"
                android:padding="10dp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Part4A"
                android:text="@string/part4A"
                android:background="?android:attr/selectableItemBackground"
                android:padding="10dp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Part5"
                android:text="@string/part5"
                android:background="?android:attr/selectableItemBackground"
                android:padding="10dp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Part6"
                android:text="@string/part6"
                android:background="?android:attr/selectableItemBackground"
                android:padding="10dp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Part7"
                android:text="@string/part7"
                android:background="?android:attr/selectableItemBackground"
                android:padding="10dp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Part8"
                android:text="@string/part8"
                android:background="?android:attr/selectableItemBackground"
                android:padding="10dp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Part9"
                android:text="@string/part9"
                android:background="?android:attr/selectableItemBackground"
                android:padding="10dp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Part9A"
                android:text="@string/part9A"
                android:background="?android:attr/selectableItemBackground"
                android:padding="10dp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Part9B"
                android:text="@string/part9B"
                android:background="?android:attr/selectableItemBackground"
                android:padding="10dp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Part10"
                android:text="@string/part10"
                android:background="?android:attr/selectableItemBackground"
                android:padding="10dp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Part11"
                android:text="@string/part11"
                android:background="?android:attr/selectableItemBackground"
                android:padding="10dp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Part12"
                android:text="@string/part12"
                android:background="?android:attr/selectableItemBackground"
                android:padding="10dp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Part13"
                android:text="@string/part13"
                android:background="?android:attr/selectableItemBackground"
                android:padding="10dp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Part14"
                android:text="@string/part14"
                android:background="?android:attr/selectableItemBackground"
                android:padding="10dp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Part14A"
                android:text="@string/part14A"
                android:background="?android:attr/selectableItemBackground"
                android:padding="10dp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Part15"
                android:text="@string/part15"
                android:background="?android:attr/selectableItemBackground"
                android:padding="10dp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Part16"
                android:text="@string/part16"
                android:background="?android:attr/selectableItemBackground"
                android:padding="10dp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Part17"
                android:text="@string/part17"
                android:background="?android:attr/selectableItemBackground"
                android:padding="10dp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Part18"
                android:text="@string/part18"
                android:background="?android:attr/selectableItemBackground"
                android:padding="10dp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Part19"
                android:text="@string/part19"
                android:background="?android:attr/selectableItemBackground"
                android:padding="10dp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Part20"
                android:text="@string/part20"
                android:background="?android:attr/selectableItemBackground"
                android:padding="10dp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Part21"
                android:text="@string/part21"
                android:background="?android:attr/selectableItemBackground"
                android:padding="10dp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Part22"
                android:text="@string/part22"
                android:background="?android:attr/selectableItemBackground"
                android:padding="10dp"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
